<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="AxisStatus" Id="{fd3b7b0c-e033-4d41-8869-9b6a831bcccc}">
    <Declaration><![CDATA[TYPE AxisStatus :
STRUCT
	bEnable				:		BOOL;
	bPowerIsEnabled		:		BOOL;
	intErrorID			:		INT;
	bHomed				:		BOOL;
	bStandStill			:		BOOL;
	OperationMode		:		OperationMode;		
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>