<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_mcJogAllowance" Id="{db956d35-9a6d-4b5b-9e9a-e9623d62272c}">
    <Declaration><![CDATA[TYPE ST_mcJogAllowance :
STRUCT
	bAllowJogParameters : BOOL; // Boolean to check if jogging is allowed because of parameters
	bAllowJogOperationMode : BOOL; // Boolean to check if jogging is allowed because of operation mode
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>