<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.6">
  <DUT Name="ST_mcJogParameters" Id="{b8e0b231-5a22-49c5-bfce-c35a35b21040}">
    <Declaration><![CDATA[TYPE ST_mcJogParameters :
STRUCT
	lrJogAcceleration		:			LREAL;	//Jog acceleration
	lrJogDeceleration		: 			LREAL;	//Jog deceleration
	lrJogJerkValue			:			LREAL;	//Jog jerk
	lrJogVelocity			:			LREAL;	//Jog velocity
	lrJogLimitPositive		:      		LREAL;  // Jog Positive Torque Limit
	lrJogLimitNegative		:			LREAL;  // Jog Negative Torque Limit
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>